--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+
+$red : #F91C1C;
+$grey : #081117;
+$white : #fff;
 *{
     margin: 0;
     padding: 0;
@@ -5,11 +9,13 @@
 }
 header{
     display: flex;
-    height: 70px;
-    margin: 0 3rem;
+    height: 100px;
+    position: fixed;
+    padding: 0 3rem;
     align-items: center;
     .logo{
-        img{}
+        height: 3.5rem;
+        width: 3.5rem;
     }
     ul{
         margin: 0 0 0 1rem;
@@ -20,7 +26,8 @@ header{
             a{
                 text-decoration: none;
                 padding: 0.5rem 0;
-                color: #252222;
+                color: $grey;
+                font-size: 1.8rem;
                 &.active{
                     position: relative;
                     &::after{
@@ -30,8 +37,148 @@ header{
                         position: absolute;
                         left: 0;
                         bottom: 0;
-                        background-color: red;
+                        background-color: $red;
                     }
+                }
+            }
+        }
+    }
+}
+main{
+    .box{
+        content: '';
+        position: fixed;
+        top: 20%;
+        z-index: 1;
+        left: 15%;
+        width: 20rem;
+        height: 28rem;
+        border: 8px solid $red;
+        transform: rotate(-10deg);
+    }
+    .pageContentcard{
+        min-width: 70%;
+        position: fixed;
+        top: 20%;
+        z-index: 2;
+        left: 28%;
+        padding-right: 8rem;
+        h2{
+            font-size: 6rem;
+            text-align: center;
+        }
+        h1{
+            font-family: Objektiv Mk1;
+            font-size: 100px;
+            font-weight: 900;
+            line-height: 144px;
+            letter-spacing: 0em;
+            text-align: center;
+            text-transform: uppercase;
+        }
+        p{
+            font-size: 3rem;
+            padding-left: 18%;
+        }
+        .details{
+            padding-left: 18%;
+            background-color: grey;
+            .accordian{
+                .accodian_title{
+                    font-family: Objektiv Mk1;
+                    font-size: 18px;
+                    font-weight: 700;
+                    line-height: 26px;
+                    letter-spacing: 0em;
+                    text-align: left;
+
+                    &.active{
+                        color: $red;
+                    }
+                }
+                .accodian_content{
+                    display: none;
+                    background-color: $white;
+                    box-shadow: 2px 6px 6px 0px #D5DDE440;
+                    padding: 15px 20px;
+                    z-index: 0;
+                    p{
+                        padding-left: 0;
+                    }
+                    &.active{
+                        display: block;
+                    }
+                }
+            }
+            .collapse_item{
+                h4{}
+                .collapse_item_content{}
+            }
+        }
+        .project_grid{
+            display: flex;
+            .project_grid_Card{}
+        }
+        .our_locations{
+            padding-left: 10rem;
+            height: 40vh;
+        }
+    }
+    .swiper{
+        &.heroslider{
+            position: relative;
+            .swiper-slide {
+                position: relative;
+                min-height: calc(100vh - 100px);
+                .slideCount{
+                    font-size: 7rem;
+                    font-weight: 600;
+                    position: absolute;
+                    top: 40%;
+                    left: 0;
+                    width: fit-content;
+                    transform: translateY(-40%);
+                }
+            }
+            .swiper-pagination{
+                position: absolute;
+                top: 50%;
+                left: 15px;
+                width: fit-content;
+                transform: translateY(10%);
+                .swiper-pagination-bullet{
+                    border-radius: 0;
+                    height: 10px;
+                    width: 10px;
+                }
+            }
+        }
+    }
+}
+footer{
+    position: fixed;
+    bottom: 2rem;
+    left: 2rem;
+    z-index: 5;
+    color: $grey;
+    ul{
+        list-style: none;
+        margin: 0 0 1rem 0;
+        padding: 0;
+        display: flex;
+        li{
+            margin-right: 10px;
+            height: 2rem;
+            width: 2rem;
+            color: $white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            a{
+                text-decoration: none;
+                color: $white;
+                img{
+                    fill: $white;
                 }
             }
         }
