--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-@import url('https://use.typekit.net/jop3hfe.css');
-
 $red : #F91C1C;
 $grey : #081117;
 $white : #fff;
@@ -8,8 +6,37 @@ $white : #fff;
     padding: 0;
     box-sizing: border-box;
 }
+.pointer{
+    cursor: pointer;
+}
+.flex{
+    display: flex;
+}
+
+.flexColumn{
+    flex-direction: column;
+}
+
+.justifyBetween{
+    justify-content: space-between;
+}
+
+.alignItemsCenter{
+    align-items: center;
+}
+
+.hide{
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+}
+.show{
+    opacity: 1;
+    visibility: visible;
+}
 header{
     display: flex;
+    background-color: #fff;
     height: 100px;
     position: fixed;
     top: 0;
@@ -64,170 +91,277 @@ header{
     }
 }
 main{
+    margin-top: 100px;
+    height: calc(100vh - 200px);
+    overflow-y: auto;
     .pageContentcard{
-        .box{
-            content: '';
-            position: fixed;
-            top: 20%;
-            z-index: 1;
-            left: 18%;
-            width: 20rem;
-            height: 28rem;
-            border: 8px solid $red;
-            transform: rotate(-10deg);
-        }
-        min-width: 70%;
-        position: fixed;
-        top: 20%;
-        z-index: 2;
-        left: 28%;
-        padding-right: 8rem;
-        h2{
-            font-size: 6rem;
-            text-align: center;
+        width: 60%;
+        position: relative;
+        margin-left: 40%;
+        &__heading{
+            margin-left: -10%;
         }
         h1{
-            font-family: Objektiv Mk1;
-            font-size: 100px;
-            font-weight: 900;
-            line-height: 144px;
-            letter-spacing: 0em;
-            text-align: center;
+            font-size: 5rem;
+            margin: 2rem 0;
             text-transform: uppercase;
-            z-index: 3;
         }
         p{
-            font-size: 3rem;
-            padding-left: 18%;
+            font-size: 1.5rem;
+        }
+        &__content{
+            min-height: calc(100vh - 200px);
         }
         .details{
-            padding-left: 18%;
             .accordian{
                 .accodian_title{
-                    font-family: Objektiv Mk1;
-                    font-size: 18px;
-                    font-weight: 700;
-                    line-height: 26px;
-                    letter-spacing: 0em;
-                    text-align: left;
-
+                    font-size: 1.5rem;
+                    font-weight: bold;
                     &.active{
                         color: $red;
                     }
                 }
                 .accodian_content{
                     display: none;
-                    background-color: $white;
-                    box-shadow: 2px 6px 6px 0px #D5DDE440;
-                    padding: 15px 20px;
-                    z-index: 0;
-                    p{
-                        padding-left: 0;
+                    transition: dispaly 1s ease-in;
+                    &.notsuccess{
+                        border: 1px solid $grey;
+                        padding: 1rem 1rem;
+                        margin: 1rem 1rem 1rem 0;
                     }
                     &.active{
                         display: block;
+                        form{
+                            .tabs_header{
+                                display: flex;
+                                .tab_title{
+                                }
+                            }
+                            .tabs_content{
+                                margin-top: 1rem;
+                                .tabs_step{
+                                    position: relative;
+                                    display: flex;
+                                    flex-wrap: wrap;
+                                    .tab__leftcontent{
+                                        width: 48%;
+                                    }
+                                    .tab__rightcontent{
+                                        width: calc(100% - 50%);
+                                        display: flex;
+                                        flex-wrap: wrap;
+                                        div{
+                                            width: 48%;
+                                            margin: 1% 1%;
+                                        }
+                                        padding-bottom: 1rem;
+                                    }
+                                    button{
+                                        width: 100%;
+                                    }
+                                    .button_container_tabs_form{
+                                        display: flex;
+                                        position: absolute;
+                                        top: -2rem;
+                                        right: 1rem;
+                                        button{
+                                            background: none;
+                                            border: 0;
+                                            margin: 0 .5rem;
+                                        }
+                                    }
+                                    .logo{
+                                        position: absolute;
+                                        top: -2rem;
+                                        left: 0;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
-            .collapse_item{
-                h4{}
-                .collapse_item_content{}
+            .success_message{
+                background: #24853C33;
+                padding: .5rem 1rem;
+                border-radius: 3px;
+                margin: .5rem 0;
+                font-size: .8rem;
+                line-height: 1.2rem;
+                width: fit-content;
+                position: relative;
+                svg{
+                    position: absolute;
+                    top: 0.5rem;
+                    right: 0.5rem;
+                    height: .8rem;
+                }
+            }
+            &.contact__Form{
+                border: 1px solid $grey;
+                padding: 1rem 1rem;
+                margin: 1rem 1rem 1rem 0;
+            }
+        }                 
+        .form__header{
+            justify-content: space-between;
+            margin-bottom: .5rem;
+            div{
+                display: flex;
+                align-items: center;
+                button{
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                    outline: 0;
+                    &:focus{
+                        outline: 0;
+                    }
+                }
+                .close{
+                    margin: 0 .5rem;
+                }
             }
         }
-        .project_grid{
+        .tab__form{
+            background: linear-gradient(0deg, #F0F2F5, #F0F2F5),
+            linear-gradient(0deg, #BCC0C4, #BCC0C4);
+            padding: 1rem;
+            width: 100%;
             display: flex;
-            .project_grid_Card{}
+            flex-wrap: wrap;
+            div{
+                display: flex;
+                flex-wrap: wrap;
+                width: 50%;
+                margin-bottom: .5rem;
+                position: relative;
+                &:nth-child(odd){
+                    width: calc(50% - .5rem);
+                    margin-right: .5rem;
+                }
+                img{
+                    position: absolute;
+                    top: 1.8rem;
+                    right: .5rem;
+                }
+                input{
+                    width: 100%;
+                    border: none;
+                    padding: .5rem .8rem .5rem .8rem;
+                    outline: 0;
+                    max-height: 2rem;
+                    &:focus{
+                        border: none;
+                        outline: 0;
+                    }
+                    &.error{
+                        // padding: .5rem 2rem .5rem .8rem;
+                        border: 1px solid $red;
+                    }
+                }
+                label{
+                    margin-bottom: .2rem;
+                    width: 100%;
+                    font-weight: bold;
+                }
+                .error_message{
+                    // display: none;
+                    background: #E41E3F33;
+                    width: 100%;
+                    padding: .2rem .5rem;
+                    border-radius: 0 0 .4rem .4rem;
+                }
+            }
+            textarea{
+                border: none;
+                width: 100%;
+                padding: .8rem;
+                height: 5rem;
+                margin: .5rem 0;
+            }
         }
-        .our_locations{
-            padding-left: 10rem;
-            height: 40vh;
+        .project_grid {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 1rem;
+            position: relative;
+            overflow: hidden;
+          
+            &__Card {
+              width: 30%;
+              margin: 0 1% 1% 0;
+              &__image {
+                width: 100%;
+              }
+              &__content {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background-color: $red;
+              }
+              &:hover{
+                  &__content {
+                    top: 0%;
+                  }
+                cursor: pointer;
+              }
+            }
+        }     
+        .box{
+            width: 300px;
+            height: 400px;
+            border: 5px solid $red;
+            position: fixed;
+            top: 150px;
+            transform: rotate(-10deg);
+            right: 65%;
         }
         &.pagenotfound{
-            .box{
-                content: '';
-                position: fixed;
-                top: 47%;
-                z-index: 1;
-                left: 52%;
-                width: 14rem;
-                height: 21rem;
-                border: 8px solid $red;
-                transform: rotate(-10deg) translate(-50%,-50%);
-            }
-            h4{
-                position: fixed;
-                font-size: 1em;
+            width: 100%;
+            position: relative;
+            margin: auto;
+            text-align: center;
+            h1{
+                font-size: 35em;
+                margin: 0;
+                line-height: 30rem;
+
                 font-family: Objektiv Mk1;
                 font-weight: 900;
                 letter-spacing: 0em;
-                text-align: left;
-                bottom: 20%; 
-                left: 50%;    
-                transform: translateX(-50%); 
-            }
-            h1{
-                left: 50%;    
-                transform: translateX(-50%); 
-                position: fixed;
-                font-size: 28em;
-                font-family: Objektiv Mk1;
-                font-weight: bold;
-                line-height: 720px;
-                letter-spacing: 0em;
-                text-align: left;
-                top: 0;    
-                @media screen and (max-width: "720px") {
-                    font-size: 18em;
-                }
+
             }
             img{
-                position: fixed;
-                top: 50%;
-                left: 50%;    
-                transform: translate(-50%,-50%);
-                height: 25em;
-                z-index: 3;
-                @media screen and (max-width: "720px") {
-                    height: 40vh;
-                }
-            }
-        }
-    }
-    .swiper{
-        &.heroslider{
-            position: relative;
-            .swiper-slide {
-                position: relative;
-                min-height: calc(100vh - 100px);
-                .slideCount{
-                    font-size: 7rem;
-                    font-weight: 600;
-                    position: absolute;
-                    top: 40%;
-                    left: 0;
-                    width: fit-content;
-                    transform: translateY(-40%);
-                }
-            }
-            .swiper-pagination{
                 position: absolute;
-                top: 50%;
-                left: 15px;
-                width: fit-content;
-                transform: translateY(10%);
-                .swiper-pagination-bullet{
-                    border-radius: 0;
-                    height: 10px;
-                    width: 10px;
-                }
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                height: 450px;
             }
-        }
+            h4{}
+            .box{
+                width: 300px;
+                height: 400px;
+                border: 5px solid $red;
+                position: fixed;
+                top: 45%;
+                transform: rotate(-10deg) translate(-50%, -50%);
+                left: 51%;
+            }
+        }    
+        .our_locations{
+            position: fixed;
+            top: 220px;
+            right: 56%;
+            height: 220px;
+        }          
     }
 }
 footer{
-    position: fixed;
-    bottom: 2rem;
-    left: 2rem;
+    padding: 2rem 3rem;
+    height: 100px;
     z-index: 5;
     color: $grey;
     ul{
@@ -253,3 +387,22 @@ footer{
         }
     }
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #1B74E4; 
+    border-radius: 10px;
+  }
+  
