--- a/src/App.scss
+++ b/src/App.scss
@@ -13,10 +13,55 @@ body{
 .pointer{
     cursor: pointer;
 }
+
 .flex{
     display: flex;
 }
 
+input[type="checkbox"] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    /* Remove most all native input styles */
+    appearance: none;
+    /* For iOS < 15 */
+    background-color: var(--form-background);
+    /* Not removed via appearance */
+    margin: 0;  
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 1px solid #C9CCD1;
+    border-radius: 6px;
+    transform: translateY(-0.075em);  
+    display: grid;
+    place-content: center;
+  }
+  
+  input[type="checkbox"]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--form-control-color);
+    /* Windows High Contrast Mode */
+    background-color: #1B74E4;
+  }
+  
+  input[type="checkbox"]:checked::before {
+    transform: scale(1);
+  }
+  
+  input[type="checkbox"]:disabled {
+    --form-control-color: var(--form-control-disabled);  
+    color: var(--form-control-disabled);
+    cursor: not-allowed;
+  }
+  
+  
 .flexColumn{
     flex-direction: column;
 }
@@ -30,7 +75,7 @@ body{
 }
 
 .hide{
-    display: none;
+    display: none !important;
     opacity: 0;
     visibility: hidden;
 }
@@ -48,7 +93,7 @@ header{
     align-items: center;
     z-index: 20;
     width: 100%;
-    @media screen and (max-width: "720px") {
+    @media screen and (max-width: "955px") {
         flex-direction: column;
         padding: 2em 0em;
         align-items: unset;
@@ -57,16 +102,28 @@ header{
     .logo{
         height: 3.5rem;
         width: 3.5rem;
-        @media screen and (max-width: "720px") {
-            text-align: center;
-            background-color: grey;
+        display: flex;
+        align-items: center;
+        margin-left: 1rem;
+        text-decoration: none;
+        .text{
+            display: none;
+        }
+        @media screen and (max-width: "955px") {
             width: 100%;
+            .text{
+                display: block;
+                font-weight: bold;
+                font-size: 2rem;
+                color: #081117;
+                margin-left: 1rem;
+            }
         }
     }
     ul{
-        @media screen and (max-width: "720px") {
+        @media screen and (max-width: "955px") {
             width: 100%;
-            margin:0;
+            margin:1rem 0;
         }
         margin: 0 0 0 1rem;
         list-style: none;
@@ -78,6 +135,9 @@ header{
                 padding: 0.5rem 0;
                 color: $grey;
                 font-size: 1.8rem;
+                @media screen and (max-width: "955px") {
+                    font-size: 1.2rem;
+                }
                 &.active{
                     position: relative;
                     &::after{
@@ -102,9 +162,13 @@ main{
         overflow-y: unset;
     }
     .pageContentcard{
-        width: 60%;
+        width: 60%;        
         position: relative;
         margin-left: 40%;
+        @media screen and (max-width: "955px") {
+            width: 95%;
+            margin: 0 auto;
+        }
         &__heading{
             margin-left: -10%;
         }
@@ -113,7 +177,70 @@ main{
             margin: 4rem 0 1rem -19rem;
             font-weight: bolder;
             line-height: 8rem;
-            text-transform: uppercase;
+            text-transform: uppercase; 
+            position: relative;           
+            @media screen and (max-width: "955px") {
+                font-size: 4rem;
+                margin: 4rem 0 6rem 4rem;
+                font-weight: bolder;
+                line-height: 4rem;
+                &.boxed{
+                    &::after{
+                        content: '';
+                        width: min(50%, 200px);
+                        height: min(50vh, 200px);
+                        border: 5px solid $red;
+                        position: absolute;
+                        top: -1rem;
+                        transform: rotate(-10deg);
+                        left: -3rem;
+                    }
+                }
+            }           
+            @media screen and (max-width: "478px") {
+                font-size: 2rem;
+                margin: 4rem 0 6rem 2rem;
+                font-weight: bolder;
+                line-height: 2rem;
+                &.boxed{
+                    &::after{
+                        content: '';
+                        width: min(50%, 100px);
+                        height: min(30vh, 150px);
+                        border: 5px solid $red;
+                        position: absolute;
+                        top: -2.8rem;
+                        transform: rotate(-10deg);
+                        left: -2rem;
+                        @media screen and (max-width: "955px") {}
+                        @media screen and (max-width: "478px") {
+                            top: 8rem;
+                            width: min(50%, 130px);
+                            height: min(35vh, 200px);
+                            left: 35%;
+                        }
+                    }
+                }
+                &.boxedhome{
+                    &::after{
+                        content: '';
+                        width: min(50%, 100px);
+                        height: min(30vh, 150px);
+                        border: 5px solid $red;
+                        position: absolute;
+                        top: -2.8rem;
+                        transform: rotate(-10deg);
+                        left: -2rem;
+                        @media screen and (max-width: "955px") {}
+                        @media screen and (max-width: "478px") {
+                            top: -3rem;
+                            width: min(50%, 109px);
+                            height: min(35vh, 150px);
+                            left: -4%;
+                        }
+                    }
+                }
+            }
         }
         p{
             font-size: 1.5rem;
@@ -126,23 +253,49 @@ main{
                 .accodian_title{
                     font-size: 1.5rem;
                     font-weight: bold;
+                    @media screen and (max-width: "955px") {}
+                    @media screen and (max-width: "478px") {
+                        font-size: 1rem;
+                        text-align: center;
+                        margin: 1rem auto;
+                        padding: .5rem;
+                        width: 80%;
+                        border-radius: 5px;
+                        font-weight: bold;
+                        background-color: #E4E6EB;
+                        color: #050505;
+                    }
                     &.active{
                         color: $red;
+                        @media screen and (max-width: "478px") {
+                            background-color: #1B74E4;
+                            color: $white;
+                        }
                     }
                 }
                 .accodian_content{
                     display: none;
                     transition: dispaly 1s ease-in;
                     &.notsuccess{
-                        border: 1px solid $grey;
+                        box-shadow: 2px 6px 6px 0px #D5DDE440;
+                        border: 1px solid #D5DDE4;
                         padding: 1rem 1rem;
                         margin: 1rem 1rem 1rem 0;
+                        @media screen and (max-width: "478px") {
+                            box-shadow: unset;
+                            border: none;
+                            padding: 1rem 1rem;
+                            margin: 1rem 1rem 1rem 0;
+                        }
                     }
                     &.active{
                         display: block;
                         form{
                             .tabs_header{
                                 display: flex;
+                                @media screen and (max-width: "478px") {
+                                    display: none;
+                                }
                                 .tab_title{
                                 }
                             }
@@ -151,19 +304,63 @@ main{
                                 .tabs_step{
                                     position: relative;
                                     display: flex;
+                                    @media screen and (max-width: "478px") {
+                                        width: 80%;
+                                        margin: auto;
+                                        // display: flex !important;
+                                        // opacity: 1 !important;
+                                        // visibility: visible !important;
+                                    }
                                     flex-wrap: wrap;
                                     .tab__leftcontent{
                                         width: 48%;
+                                        @media screen and (max-width: "478px") {
+                                            width: 100%;
+                                            margin-bottom: 1rem;
+                                        }
                                     }
                                     .tab__rightcontent{
                                         width: calc(100% - 50%);
                                         display: flex;
                                         flex-wrap: wrap;
+                                        padding-bottom: 1rem;
+                                        @media screen and (max-width: "478px") {
+                                            width: 100%;
+                                            display: block;
+                                        }
                                         div{
                                             width: 48%;
                                             margin: 1% 1%;
+                                            @media screen and (max-width: "478px") {
+                                                width: 100%;
+                                            }
+                                            label{
+                                                margin-left: 5px;
+                                            }
                                         }
-                                        padding-bottom: 1rem;
+                                    }
+                                    .nextBtn{
+                                        background-color: transparent;
+                                        border: none;
+                                        outline: none;
+                                        cursor: pointer;
+                                        p{
+                                            display: none;
+                                        }
+                                        @media screen and (max-width: "478px") {
+                                            img{
+                                                display: none;
+                                            }
+                                            background-color: #1B74E4;
+                                            border-radius: 5px;
+                                            color: #F0F2F5;
+                                            padding: 0.5rem 0.5rem;
+                                            text-align: center;
+                                            p{
+                                                font-size: .9rem;
+                                                display: block;
+                                            }
+                                        }
                                     }
                                     button{
                                         width: 100%;
@@ -177,6 +374,10 @@ main{
                                             background: none;
                                             border: 0;
                                             margin: 0 .5rem;
+                                            cursor: pointer;
+                                        }
+                                        div{
+                                            cursor: pointer;
                                         }
                                     }
                                     .logo{
@@ -316,6 +517,7 @@ main{
                 .form_service_tags_count{
                     width: 15%;
                     margin: .5rem 0;
+                    padding-left: 1rem;
                 }
             }
         }
@@ -354,7 +556,10 @@ main{
             position: fixed;
             top: 150px;
             transform: rotate(-10deg);
-            right: 65%;
+            right: 65%;          
+            @media screen and (max-width: "955px") {
+                display: none;
+            }
         }
         &.pagenotfound{
             width: 100%;
@@ -367,6 +572,10 @@ main{
                 margin: 0;
                 line-height: 30rem;
                 letter-spacing: 0em;
+                @media screen and (max-width: "955px") {}
+                @media screen and (max-width: "478px") {
+                    font-size: 15rem;
+                }
             }
             img{
                 position: absolute;
@@ -374,6 +583,11 @@ main{
                 left: 50%;
                 transform: translateX(-50%);
                 height: 450px;
+                @media screen and (max-width: "955px") {}
+                @media screen and (max-width: "478px") {
+                    top: 7.8rem;
+                    height: 15rem;
+                }
             }
             h4{}
             .box{
@@ -394,12 +608,80 @@ main{
                 font-weight: bolder;
                 line-height: 8rem;
                 text-transform: uppercase;
+                @media screen and (max-width: "955px") {
+                    font-size: 4rem;
+                    margin: 4rem 0 6rem 4rem;
+                    font-weight: bolder;
+                    line-height: 4rem;
+                    &.boxed{
+                        &::after{
+                            content: '';
+                            width: min(50%, 200px);
+                            height: min(50vh, 200px);
+                            border: 5px solid $red;
+                            position: absolute;
+                            top: -1rem;
+                            transform: rotate(-10deg);
+                            left: -3rem;
+                        }
+                    }
+                }           
+                @media screen and (max-width: "478px") {
+                    font-size: 2rem;
+                    margin: 12rem 0 6rem 2rem;
+                    font-weight: bolder;
+                    line-height: 2rem;
+                    &.boxed{
+                        &::after{
+                            content: '';
+                            width: min(50%, 100px);
+                            height: min(30vh, 150px);
+                            border: 5px solid $red;
+                            position: absolute;
+                            top: -2.8rem;
+                            transform: rotate(-10deg);
+                            left: -2rem;
+                            @media screen and (max-width: "955px") {}
+                            @media screen and (max-width: "478px") {
+                                top: 8rem;
+                                width: min(50%, 130px);
+                                height: min(35vh, 200px);
+                                left: 35%;
+                            }
+                        }
+                    }
+                    &.boxedhome{
+                        &::after{
+                            content: '';
+                            width: min(50%, 100px);
+                            height: min(30vh, 150px);
+                            border: 5px solid $red;
+                            position: absolute;
+                            top: -2.8rem;
+                            transform: rotate(-10deg);
+                            left: -2rem;
+                            @media screen and (max-width: "955px") {}
+                            @media screen and (max-width: "478px") {
+                                top: -3rem;
+                                width: min(50%, 109px);
+                                height: min(35vh, 150px);
+                                left: -4%;
+                            }
+                        }
+                    }
+                }
             }
+            h4{
+                color: $red;
+            }    
             .our_locations{
                 position: fixed;
                 top: 40%;
                 right: 56%;
                 height: 220px;
+                @media screen and (max-width: "478px") {
+                    display: none;
+                }
             }          
         }  
     }
@@ -416,6 +698,12 @@ footer{
     height: 120px;
     z-index: 5;
     color: $grey;
+    background-color: $white;         
+    @media screen and (max-width: "955px") {
+        display: none;
+        width: 100%;
+        max-width: unset;
+    }
     ul{
         list-style: none;
         margin: 0 0 1rem 0;
@@ -452,6 +740,11 @@ footer{
     letter-spacing: 0em;
     text-align: center;
     
+    @media screen and (max-width: "478px") {
+        top: 90%;
+        left: -1.8rem;
+        font-size: 100px;
+    }
 }
 
 .pagination{
@@ -459,6 +752,9 @@ footer{
     top: 50%;
     transform: translateY(calc(-50% + .5rem));
     left: 5rem;
+    @media screen and (max-width: "478px") {
+        top: 90%;
+    }
     .dot{
         width: .5rem;
         height: .5rem;
